--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/async": "^3.0.8",
     "@types/chai": "^4.2.9",
+    "@types/crypto-js": "^3.1.43",
     "@types/lodash": "^4.14.149",
     "@types/mocha": "^7.0.1",
     "@types/node": "^13.7.4",
@@ -38,7 +39,9 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "install": "^0.13.0",
     "mocha": "^7.0.1",
+    "npm": "^6.13.7",
     "prettier": "^1.19.1",
     "tiny-pinyin": "^1.3.0",
     "ts-node": "^8.6.2",
@@ -48,6 +51,7 @@
   "dependencies": {
     "async": "^3.1.1",
     "axios": "^0.19.2",
+    "crypto-js": "^4.0.0",
     "full-icu": "^1.3.0",
     "lodash": "^4.17.15"
   }
