--- a/package.json
+++ b/package.json
@@ -47,13 +47,13 @@
     "tiny-pinyin": "^1.3.0",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.8.2"
+    "typescript": "^3.8.2",
+    "full-icu": "^1.3.0"
   },
   "dependencies": {
     "async": "^3.1.1",
     "axios": "^0.19.2",
     "crypto-js": "^4.0.0",
-    "full-icu": "^1.3.0",
     "lodash": "^4.17.15"
   }
 }
