--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdd-node-sdk",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "pdd node sdk",
   "main": "dist/index.js",
   "types": "dist/@types/index.d.ts",
@@ -28,30 +28,30 @@
   "homepage": "https://github.com/lywzx/pdd-node-sdk#readme",
   "devDependencies": {
     "@types/async": "^3.0.8",
-    "@types/chai": "^4.2.9",
+    "@types/chai": "^4.2.11",
     "@types/crypto-js": "^3.1.43",
     "@types/lodash": "^4.14.149",
-    "@types/mocha": "^7.0.1",
-    "@types/node": "^13.7.4",
-    "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "@typescript-eslint/parser": "^2.20.0",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.9.4",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
     "chai": "^4.2.0",
-    "cross-env": "^7.0.0",
+    "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "full-icu": "^1.3.1",
     "install": "^0.13.0",
-    "mocha": "^7.0.1",
-    "npm": "^6.13.7",
+    "mocha": "^7.1.1",
+    "npm": "^6.14.3",
     "prettier": "^1.19.1",
     "tiny-pinyin": "^1.3.0",
-    "ts-node": "^8.6.2",
+    "ts-node": "^8.8.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.8.2",
-    "full-icu": "^1.3.0"
+    "typescript": "^3.8.3"
   },
   "dependencies": {
-    "async": "^3.1.1",
+    "async": "^3.2.0",
     "axios": "^0.19.2",
     "crypto-js": "^4.0.0",
     "lodash": "^4.17.15"
