update package deps versin

--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   "keywords": [
     "pdd",
     "pinduoduo",
-    "pinduoke"
+    "duoduoke",
+    "pdd-sdk",
+    "sdk",
+    "拼多多",
+    "多多客",
+    "拼多多SDK"
   ],
   "author": "liuyang",
   "license": "MIT",
@@ -27,26 +32,25 @@
   },
   "homepage": "https://github.com/lywzx/pdd-node-sdk#readme",
   "devDependencies": {
-    "@types/async": "^3.0.8",
+    "@types/async": "^3.2.0",
     "@types/chai": "^4.2.11",
-    "@types/crypto-js": "^3.1.43",
+    "@types/crypto-js": "^3.1.44",
     "@types/lodash": "^4.14.149",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^13.9.4",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
+    "@types/node": "^13.11.1",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
     "chai": "^4.2.0",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "full-icu": "^1.3.1",
     "install": "^0.13.0",
     "mocha": "^7.1.1",
-    "npm": "^6.14.3",
     "prettier": "^1.19.1",
     "tiny-pinyin": "^1.3.0",
-    "ts-node": "^8.8.1",
+    "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3"
   },
