--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pdd-node-sdk",
-  "version": "0.0.10",
-  "description": "pdd node sdk",
+  "version": "0.0.11",
+  "description": "pinduoduo open platform node sdk",
   "main": "dist/index.js",
   "types": "dist/@types/index.d.ts",
   "scripts": {
@@ -10,6 +10,9 @@
     "format": "prettier --write \"+(src|scripts)/**/*.ts\"",
     "test": "mocha --require ts-node/register test/*.ts test/**/*.ts",
     "generate": "cross-env NODE_ICU_DATA=node_modules/full-icu ts-node -r tsconfig-paths/register ./scripts/index.ts"
+  },
+  "engines": {
+    "node": ">=8.9.0"
   },
   "repository": {
     "type": "git",
@@ -35,6 +38,7 @@
     "@types/async": "^3.2.0",
     "@types/chai": "^4.2.11",
     "@types/crypto-js": "^3.1.44",
+    "@types/debug": "^4.1.5",
     "@types/lodash": "^4.14.149",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.1",
@@ -58,6 +62,7 @@
     "async": "^3.2.0",
     "axios": "^0.19.2",
     "crypto-js": "^4.0.0",
+    "debug": "^4.1.1",
     "lodash": "^4.17.15"
   }
 }
