feat(use lerna): use lerna manage package

--- a/.editorconfig
+++ b/.editorconfig
@@ -23,7 +23,7 @@ indent_size = 4
 [Makefile]
 indent_style = tab
 
-# Indentation override for all JS under lib directory
+# Indentation override for all JS under src directory
 [{**.js,src/**.ts,test/**.ts}]
 indent_style = space
 indent_size = 2
