--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "pdd-node-sdk",
-  "version": "0.0.11",
+  "name": "@pin-duo-duo/core",
+  "version": "0.0.1",
   "description": "pinduoduo open platform node sdk",
   "main": "dist/index.js",
   "types": "dist/@types/index.d.ts",
+  "homepage": "https://www.lyblog.net",
   "scripts": {
     "build": "tsc",
     "lint": "eslint src --ext .ts --fix",
@@ -54,6 +55,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "full-icu": "^1.3.1",
     "install": "^0.13.0",
+    "lerna": "^3.22.0",
     "mocha": "^7.1.1",
     "prettier": "^1.19.1",
     "tiny-pinyin": "^1.3.0",
@@ -68,6 +70,17 @@
     "debug": "^4.2.0",
     "lodash": "^4.17.15",
     "snyk": "^1.323.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -c .commitlintrc.json -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "packages/**/*.{ts,json}": [
+      "prettier --ignore-path ./.prettierignore --write"
+    ]
   },
   "snyk": true
 }
