--- a/packages/pdd-origin-api/tsconfig.json
+++ b/packages/pdd-origin-api/tsconfig.json
@@ -8,11 +8,8 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "sourceMap": true,
-    "lib": ["es6"]
+    "lib": ["es6"],
   },
-  "include": ["packages", "examples", "scripts"],
-  "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
