--- a/package.json
+++ b/package.json
@@ -2,20 +2,18 @@
   "name": "root",
   "version": "0.0.1",
   "description": "pinduoduo open platform node sdk",
-  "main": "dist/index.js",
-  "types": "dist/@types/index.d.ts",
   "workspaces": [
     "packages/*"
   ],
   "private": true,
   "scripts": {
     "start": "",
-    "build": "tsc --build packages/pdd-origin-api/tsconfig.json && tsc --build packages/core/tsconfig.json",
-    "lint": "eslint src --ext .ts --fix",
-    "format": "prettier --write \"+(packages|scripts)/**/*.ts\"",
+    "build": "tsc --build packages/pdd-origin-api/tsconfig.json && tsc --build packages/core/tsconfig.json && tsc --build packages/scripts/tsconfig.json",
+    "lint": "eslint packages --ext .ts --fix",
+    "format": "prettier --write \"+(packages)/**/*.ts\"",
     "test": "mocha --require ts-node/register --require tsconfig-paths/register packages/**/*.spec.ts --colors",
     "report-coverage": "codecov",
-    "generate": "cross-env NODE_ICU_DATA=node_modules/full-icu ts-node -r tsconfig-paths/register packages/scripts/src/index.ts",
+    "generate-code": "cross-env NODE_ICU_DATA=node_modules/full-icu ts-node -r tsconfig-paths/register packages/scripts/src/index.ts",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect",
     "lint-staged": "lint-staged"
