--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   },
   "homepage": "https://github.com/lywzx/pdd-node-sdk#readme",
   "devDependencies": {
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.1",
@@ -53,8 +55,10 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.3",
     "full-icu": "^1.3.1",
+    "husky": "^4.2.5",
     "install": "^0.13.0",
     "lerna": "^3.22.0",
+    "lint-staged": "^10.2.11",
     "mocha": "^7.1.1",
     "prettier": "^1.19.1",
     "tiny-pinyin": "^1.3.0",
@@ -65,14 +69,9 @@
   "dependencies": {},
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -c .commitlintrc.json -E HUSKY_GIT_PARAMS"
+      "pre-commit": "npm run lint-staged",
+      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
     }
-  },
-  "lint-staged": {
-    "packages/**/*.{ts,json}": [
-      "prettier --ignore-path ./.prettierignore --write"
-    ]
   },
   "snyk": true
 }
