--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint packages --ext .ts --fix",
     "format": "prettier --write \"+(packages)/**/*.ts\"",
     "test": "mocha --require ts-node/register --require tsconfig-paths/register packages/**/*.spec.ts --colors",
-    "report-coverage": "codecov",
+    "coverage": "nyc npm run test",
+    "coverage:report": "nyc npm run test --reporter=lcov --reporter=text-summary",
     "generate-code": "cross-env NODE_ICU_DATA=node_modules/full-icu ts-node -r tsconfig-paths/register packages/scripts/src/index.ts",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.1",
@@ -60,6 +62,7 @@
     "lerna": "^3.22.0",
     "lint-staged": "^10.2.11",
     "mocha": "^7.1.1",
+    "nyc": "^15.1.0",
     "prettier": "^1.19.1",
     "tiny-pinyin": "^1.3.0",
     "ts-node": "^8.8.2",
