--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -39,7 +39,8 @@
     "@pin-duo-duo/pdd-origin-api": "^0.0.0",
     "lodash": "^4.17.19",
     "crypto-js": "^4.0.0",
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "debug": "^4.2.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.158",
