--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -29,8 +29,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.19",
-    "async": "^3.2.0",
-    "debug": "^4.2.0"
+    "async": "^3.2.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.158",
