--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ node_js:
   - '8'
 
 install:
-  - npm install lerna -g
   - npm install codecov -g
-  - lerna bootstrap --hoist=false
+  - npm install
+  - npx lerna bootstrap
   - npm install snyk -g
 
 script:
