style(ci): add async package

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,11 +40,13 @@
     "lodash": "^4.17.19",
     "crypto-js": "^4.0.0",
     "axios": "^0.19.2",
-    "debug": "^4.2.0"
+    "debug": "^4.2.0",
+    "async": "^3.2.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.158",
     "@types/crypto-js": "^3.1.44",
-    "@types/debug": "^4.1.5"
+    "@types/debug": "^4.1.5",
+    "@types/async": "^3.2.0"
   }
 }
