--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -11,5 +11,5 @@
     "lib": ["es6"]
   },
   "include": ["src"],
-  "exclude": ["test/**/*.spec.ts"]
+  "exclude": ["node_modules", "test/**/*.spec.ts"]
 }
