--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "private": true,
   "scripts": {
+    "aaa": "rollup -c build/rollup-dev.config.js",
     "build": "tsc --build packages/pdd-origin-api/tsconfig.json && tsc --build packages/core/tsconfig.json && tsc --build packages/scripts/tsconfig.json && tsc --build packages/nestjs/tsconfig.json",
     "lint": "eslint packages --ext .ts --fix",
     "format": "prettier --write \"+(packages)/**/*.ts\"",
@@ -43,16 +44,26 @@
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@rollup/plugin-babel": "^5.1.0",
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "@rollup/plugin-replace": "^2.3.3",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.1",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
+    "brotli": "^1.3.2",
     "chai": "^4.2.0",
+    "chalk": "^4.1.0",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.3",
+    "execa": "^4.0.3",
+    "fs-extra": "^9.0.1",
     "full-icu": "^1.3.1",
     "husky": "^4.2.5",
     "install": "^0.13.0",
@@ -61,12 +72,15 @@
     "mocha": "^7.1.1",
     "nyc": "^15.1.0",
     "prettier": "^1.19.1",
+    "rollup": "^2.23.0",
+    "rollup-plugin-terser": "^6.1.0",
+    "rollup-plugin-typescript2": "^0.27.1",
     "tiny-pinyin": "^1.3.0",
     "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "zlib": "^1.0.5"
   },
-  "dependencies": {},
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint-staged",
