--- a/packages/pdd-origin-api/tsconfig.json
+++ b/packages/pdd-origin-api/tsconfig.json
@@ -1,14 +1,9 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "declaration": true,
+    "rootDir": "src",
     "outDir": "./lib",
-    "strict": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "sourceMap": true,
-    "lib": ["es6"]
+    "declarationDir": "./types"
   },
   "include": ["src"],
   "exclude": ["node_modules"]
