--- a/packages/pdd-origin-api/package.json
+++ b/packages/pdd-origin-api/package.json
@@ -9,6 +9,7 @@
   "module": "lib/index.esm.js",
   "unpkg": "lib/index.js",
   "jsdelivr": "lib/index.js",
+  "types": "lib/index.d.ts",
   "directories": {
     "lib": "lib",
     "test": "test"
