--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,6 +18,7 @@
   "module": "lib/index.esm.js",
   "unpkg": "lib/index.js",
   "jsdelivr": "lib/index.js",
+  "types": "lib/index.d.ts",
   "directories": {
     "lib": "lib",
     "test": "test"
