--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "outDir": "./lib"
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "test/**/*.spec.ts"]
+  "include": ["src", "test"],
+  "exclude": ["node_modules"]
 }
