--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -9,6 +9,7 @@
   "module": "lib/index.esm.js",
   "unpkg": "lib/index.js",
   "jsdelivr": "lib/index.js",
+  "types": "lib/index.d.ts",
   "directories": {
     "lib": "lib",
     "test": "test"
@@ -28,5 +29,8 @@
   },
   "bugs": {
     "url": "https://github.com/lywzx/pdd-node-sdk/issues"
+  },
+  "dependencies": {
+    "@pin-duo-duo/core": "^0.0.0"
   }
 }
