--- a/packages/nestjs/tsconfig.json
+++ b/packages/nestjs/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./lib",
+    "outDir": "./lib"
   },
-  "include": ["src"],
+  "include": ["src", "test"],
   "exclude": ["node_modules", "test/**/*.spec.ts"]
 }
