--- a/packages/scripts/tsconfig.json
+++ b/packages/scripts/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "outDir": "./lib"
   },
-  "include": ["src"],
+  "include": ["src", "test"],
   "exclude": ["node_modules"]
 }
