--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "ES2015",
+    "module": "CommonJS",
     "declaration": true,
     "strict": true,
     "allowSyntheticDefaultImports": true,
@@ -11,7 +11,6 @@
   },
   "include": ["packages", "examples", "scripts"],
   "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
+    "node_modules"
   ]
 }
