--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
   },
   "homepage": "https://github.com/lywzx/pdd-node-sdk#readme",
   "devDependencies": {
+    "lodash": "^4.17.19",
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@rollup/plugin-babel": "^5.1.0",
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-json": "^4.1.0",
