--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -32,11 +32,11 @@
     "url": "https://github.com/lywzx/pdd-node-sdk/issues"
   },
   "dependencies": {
-    "lodash": "^4.17.19",
-    "async": "^3.2.0",
-    "axios": "^0.19.2"
+    "lodash": "^4.17.19"
   },
   "devDependencies": {
+    "async": "^3.2.0",
+    "axios": "^0.19.2",
     "@types/lodash": "^4.14.158",
     "@types/async": "^3.2.0"
   }
