--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./lib"
+    "outDir": "./lib",
+    "emitDecoratorMetadata": false,
+    "experimentalDecorators": false
   },
   "include": ["src", "test"],
   "exclude": ["node_modules"]
