--- a/packages/pdd-origin-api/tsconfig.json
+++ b/packages/pdd-origin-api/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "./lib",
-    "declarationDir": "./types"
+    "declarationDir": "./types",
+    "emitDecoratorMetadata": false,
+    "experimentalDecorators": false
   },
   "include": ["src", "test"],
   "exclude": ["node_modules"]
