--- a/packages/nestjs/tsconfig.json
+++ b/packages/nestjs/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./lib"
+    "outDir": "./lib",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": ["src", "test"],
   "exclude": ["node_modules", "test/**/*.spec.ts"]
