--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
   },
   "homepage": "https://github.com/lywzx/pdd-node-sdk#readme",
   "devDependencies": {
-    "lodash": "^4.17.19",
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
@@ -68,9 +67,11 @@
     "install": "^0.13.0",
     "lerna": "^3.22.0",
     "lint-staged": "^10.2.11",
+    "lodash": "^4.17.19",
     "mocha": "^7.1.1",
     "nyc": "^15.1.0",
     "prettier": "^1.19.1",
+    "rimraf": "^3.0.2",
     "rollup": "^2.23.0",
     "rollup-plugin-terser": "^6.1.0",
     "rollup-plugin-typescript2": "^0.27.1",
