--- a/packages/redis-throttle-adapter/package.json
+++ b/packages/redis-throttle-adapter/package.json
@@ -27,6 +27,7 @@
     "url": "https://github.com/lywzx/pdd-node-sdk/issues"
   },
   "devDependencies": {
+    "@pin-duo-duo/core": "^0.0.0",
     "@types/redis": "^2.8.25",
     "redis": "^3.0.2"
   }
