--- a/packages/redis-throttle-adapter/tsconfig.json
+++ b/packages/redis-throttle-adapter/tsconfig.json
@@ -2,8 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./lib",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "experimentalDecorators": false,
+    "emitDecoratorMetadata": false
   },
   "include": ["src", "test"],
   "exclude": ["node_modules", "test/**/*.spec.ts"]
