--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,11 @@ node_js:
 
 install:
   - npm install yarn -g
-  - npm install codecov -g
-  - yarn --ignore-engines
+  - yarn add codecov
+  - yarn
 
 script:
-  - npm run build
-  - npm run coverage -- --reporter=text-lcov > coverage.lcov
-  - codecov -f .nyc_output/*.json
+  - yarn run build
+  - yarn run coverage -- --reporter=text-lcov > coverage.lcov
+  - npx codecov -f .nyc_output/*.json
 
