--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   ],
   "private": true,
   "scripts": {
-    "dev": "rollup -w -c build/rollup.config.js",
-    "build": "node build/build-pkg.js",
+    "dev": "cross-env node_options=--max_old_space_size=4096 rollup -w -c build/rollup.config.js",
+    "build": "cross-env node_options=--max_old_space_size=4096 node build/build-pkg.js",
     "lint": "eslint packages --ext .ts --fix",
     "format": "prettier --write \"+(packages)/**/*.ts\"",
     "test": "mocha --require ts-node/register --require tsconfig-paths/register --project tsconfig.json packages/**/*.spec.ts --colors",
