--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -32,6 +32,7 @@
     "@pin-duo-duo/core": "^0.0.0"
   },
   "devDependencies": {
+    "@nestjs/core": "^7.4.2",
     "reflect-metadata": "^0.1.13"
   }
 }
