--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -29,10 +29,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.4.2",
-    "@pin-duo-duo/core": "^0.0.0"
+    "@pin-duo-duo/core": "^0.0.0",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@nestjs/core": "^7.4.2",
+    "@types/lodash": "^4.14.159",
     "reflect-metadata": "^0.1.13"
   }
 }
