--- a/packages/redis-throttle-adapter/package.json
+++ b/packages/redis-throttle-adapter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pin-duo-duo/redis-throttle-adapter",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "> TODO: description",
   "author": "lywzx <liuyang@lyblog.net>",
   "homepage": "https://github.com/lywzx/pdd-node-sdk/tree/master/packages/redis-throttle-adapter#readme",
@@ -28,7 +28,7 @@
     "url": "https://github.com/lywzx/pdd-node-sdk/issues"
   },
   "devDependencies": {
-    "@pin-duo-duo/core": "^0.0.0",
+    "@pin-duo-duo/core": "^0.0.1-alpha.0",
     "@types/redis": "^2.8.25",
     "redis": "^3.0.2"
   }
