--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pin-duo-duo/scripts",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "> TODO: description",
   "author": "lywzx <liuyang@lyblog.net>",
   "homepage": "https://github.com/lywzx/pdd-node-sdk/tree/master/packages/scripts#readme",
@@ -35,9 +35,9 @@
     "lodash": "^4.17.19"
   },
   "devDependencies": {
-    "async": "^3.2.0",
-    "axios": "^0.19.2",
+    "@types/async": "^3.2.0",
     "@types/lodash": "^4.14.158",
-    "@types/async": "^3.2.0"
+    "async": "^3.2.0",
+    "axios": "^0.19.2"
   }
 }
