--- a/packages/pdd-origin-api/package.json
+++ b/packages/pdd-origin-api/package.json
@@ -29,5 +29,6 @@
   },
   "bugs": {
     "url": "https://github.com/lywzx/pdd-node-sdk/issues"
-  }
+  },
+  "gitHead": "23089d0926fe7014d086ab9831410f644c085ad0"
 }
