--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -39,5 +39,6 @@
     "@types/lodash": "^4.14.158",
     "async": "^3.2.0",
     "axios": "^0.19.2"
-  }
+  },
+  "gitHead": "23089d0926fe7014d086ab9831410f644c085ad0"
 }
