--- a/lerna.json
+++ b/lerna.json
@@ -12,7 +12,8 @@
       "allowBranch": [
         "master",
         "v2"
-      ]
+      ],
+      "registry": "http://registry.npmjs.org"
     }
   },
   "version": "0.0.1-alpha.0",
