--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -53,5 +53,6 @@
     "@types/debug": "^4.1.5",
     "@types/lodash": "^4.14.158",
     "debug": "^4.2.0"
-  }
+  },
+  "gitHead": "23089d0926fe7014d086ab9831410f644c085ad0"
 }
