--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,7 +27,7 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "https://registry.npm.taobao.org"
+    "registry": "http://registry.npmjs.org"
   },
   "repository": {
     "type": "git",
@@ -54,5 +54,5 @@
     "@types/lodash": "^4.14.158",
     "debug": "^4.2.0"
   },
-  "gitHead": "23089d0926fe7014d086ab9831410f644c085ad0"
+  "gitHead": "211b14d8c045925f68f393873ac0ecc51370d023"
 }
