--- a/packages/redis-throttle-adapter/package.json
+++ b/packages/redis-throttle-adapter/package.json
@@ -15,7 +15,7 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "https://registry.npm.taobao.org"
+    "registry": "http://registry.npmjs.org"
   },
   "repository": {
     "type": "git",
@@ -32,5 +32,5 @@
     "@types/redis": "^2.8.25",
     "redis": "^3.0.2"
   },
-  "gitHead": "23089d0926fe7014d086ab9831410f644c085ad0"
+  "gitHead": "211b14d8c045925f68f393873ac0ecc51370d023"
 }
