--- a/packages/pdd-origin-api/package.json
+++ b/packages/pdd-origin-api/package.json
@@ -18,7 +18,8 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "http://registry.npmjs.org"
+    "registry": "http://registry.npmjs.org",
+    "access": "public"
   },
   "repository": {
     "type": "git",
