--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -15,7 +15,8 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "http://registry.npmjs.org"
+    "registry": "http://registry.npmjs.org",
+    "access": "public"
   },
   "repository": {
     "type": "git",
