style(add new sense test unit): add test unit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "lib": ["es6"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "downlevelIteration": true
   },
   "include": ["packages", "examples", "scripts"],
   "exclude": [
