--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.1",
+    "@types/sinon": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "brotli": "^1.3.2",
@@ -75,6 +76,7 @@
     "rollup": "^2.23.0",
     "rollup-plugin-terser": "^6.1.0",
     "rollup-plugin-typescript2": "^0.27.1",
+    "sinon": "^9.0.3",
     "tiny-pinyin": "^1.3.0",
     "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
