--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - yarn
 
 script:
-  - yarn run build
-  - yarn run coverage -- --reporter=text-lcov > coverage.lcov
+  - npm run build
+  - npm run coverage -- --reporter=text-lcov > coverage.lcov
   - npx codecov -f .nyc_output/*.json
 
