--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "build": "cross-env node_options=--max_old_space_size=4096 node build/build-pkg.js",
     "lint": "eslint packages --ext .ts --fix",
     "format": "prettier --write \"+(packages)/**/*.ts\"",
-    "test": "mocha --require ts-node/register --require tsconfig-paths/register --project tsconfig.json packages/**/*.spec.ts --colors",
-    "coverage": "nyc npm run test",
-    "coverage:report": "nyc npm run test --reporter=lcov --reporter=text-summary",
+    "test": "mocha",
+    "coverage": "nyc mocha",
+    "coverage:watch": "nyc mocha --watch",
     "generate-code": "cross-env NODE_ICU_DATA=node_modules/full-icu ts-node -r tsconfig-paths/register packages/scripts/src/index.ts",
     "lint-staged": "lint-staged"
   },
@@ -77,6 +77,7 @@
     "rollup-plugin-terser": "^6.1.0",
     "rollup-plugin-typescript2": "^0.27.1",
     "sinon": "^9.0.3",
+    "source-map-support": "^0.5.19",
     "tiny-pinyin": "^1.3.0",
     "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
