--- a/.nycrc
+++ b/.nycrc
@@ -5,7 +5,9 @@
   ],
   "exclude":[
     "packages/**/*.d.ts",
-    "packages/**/*.spec.ts"
+    "packages/**/*.spec.ts",
+    "packages/pdd-origin-api/**",
+    "packages/scripts/**"
   ],
   "extension": [
     ".ts"
