--- a/.nycrc
+++ b/.nycrc
@@ -5,7 +5,7 @@
   ],
   "exclude":[
     "packages/**/*.d.ts",
-    "packages/**/*.spec.ts",
+    "packages/**/test/**/*.ts",
     "packages/pdd-origin-api/**",
     "packages/scripts/**"
   ],
