ci(fix windows not exist by self): fix windows ci exist

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,5 @@ script:
   - npm run coverage
   - npx codecov -f .nyc_output/*.json
 
+after_success
+  - travis_terminate 0 # try to make Windows quit
