ci(remove comment): remove comment

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ script:
   - npx codecov -f .nyc_output/*.json
 
 after_success
-  - travis_terminate 0 # try to make Windows quit
+  - travis_terminate 0
