--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ script:
   - npm run coverage
   - npx codecov -f .nyc_output/*.json
 
-after_success
-  - travis_terminate 0
+after_success:
+  - travis_terminate 0 # try to make Windows quit
