--- a/.travis.yml
+++ b/.travis.yml
@@ -12,15 +12,17 @@ node_js:
   - '11'
   - '10'
 
-install:
+before_install:
   - npm install yarn -g
-  - yarn add codecov -W
+  - yarn add codecov
+
+install:
   - yarn
 
 script:
   - npm run build
   - npm run coverage
-  - npx codecov -f .nyc_output/*.json
 
-after_success:
+after_script:
+  - codecov -f .nyc_output/*.json
   - travis_terminate 0 # try to make Windows quit
