style(modify package.json): update package

--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "install": "^0.13.0",
     "lerna": "^3.22.0",
     "lint-staged": "^10.2.11",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.20",
+    "@types/lodash": "^4.14.159",
     "mocha": "^7.1.1",
     "nyc": "^15.1.0",
     "prettier": "^1.19.1",
