ci(mac os ci): mac os ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ cache:
     - node_modules/ # npm packages
     - .nyc_output/
 
+addons:
+  homebrew:
+    packages: redis
+
 node_js:
   - 'node'
   - '13'
