feat(更新了缓存模块，之前缓存key存在异常): 更新缓存key，同步更新package中的依赖声明

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,18 +42,20 @@
   },
   "dependencies": {
     "@pin-duo-duo/pdd-origin-api": "^0.0.2-alpha.3",
-    "async": "^3.2.0",
-    "axios": "^0.19.2",
     "crypto-js": "^4.0.0",
-    "fast-json-stable-stringify": "^2.1.0",
-    "lodash": "^4.17.20"
+    "fast-json-stable-stringify": "^2.1.0"
   },
   "devDependencies": {
-    "@types/async": "^3.2.0",
-    "@types/crypto-js": "^3.1.44",
-    "@types/debug": "^4.1.5",
+    "@types/crypto-js": "^3.1.44"
+  },
+  "peerDependencies": {
+    "axios": "^0.19.2",
+    "async": "^3.2.0",
+    "lodash": "^4.17.20",
     "@types/lodash": "^4.14.159",
-    "debug": "^4.2.0"
+    "@types/debug": "^4.1.5",
+    "debug": "^4.2.0",
+    "@types/async": "^3.2.0"
   },
   "gitHead": "34dfab33c7abd58bd551ea88358ab0e586902e6f"
 }
