--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -29,15 +29,16 @@
     "url": "https://github.com/lywzx/pdd-node-sdk/issues"
   },
   "dependencies": {
-    "@nestjs/common": "^7.4.2",
-    "@nestjs/testing": "^7.4.2",
-    "@pin-duo-duo/core": "^0.0.2-alpha.3",
-    "lodash": "^4.17.20"
+    "@pin-duo-duo/core": "^0.0.2-alpha.3"
   },
   "devDependencies": {
+    "lodash": "^4.17.20",
+    "@types/lodash": "^4.14.159"
+  },
+  "peerDependencies": {
     "@nestjs/core": "^7.4.2",
-    "@types/lodash": "^4.14.159",
-    "reflect-metadata": "^0.1.13"
+    "@nestjs/common": "^7.4.2",
+    "@nestjs/testing": "^7.4.2"
   },
   "gitHead": "34dfab33c7abd58bd551ea88358ab0e586902e6f"
 }
