--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pin-duo-duo/nestjs",
-  "version": "0.0.2-alpha.3",
+  "version": "0.0.2-alpha.4",
   "description": "> TODO: description",
   "author": "lywzx <liuyang@lyblog.net>",
   "homepage": "https://github.com/lywzx/pdd-node-sdk/tree/master/packages/nestjs#readme",
@@ -29,15 +29,15 @@
     "url": "https://github.com/lywzx/pdd-node-sdk/issues"
   },
   "dependencies": {
-    "@pin-duo-duo/core": "^0.0.2-alpha.3"
+    "@pin-duo-duo/core": "^0.0.2-alpha.4"
   },
   "devDependencies": {
-    "lodash": "^4.17.20",
-    "@types/lodash": "^4.14.159"
+    "@types/lodash": "^4.14.159",
+    "lodash": "^4.17.20"
   },
   "peerDependencies": {
-    "@nestjs/core": "^7.4.2",
     "@nestjs/common": "^7.4.2",
+    "@nestjs/core": "^7.4.2",
     "@nestjs/testing": "^7.4.2"
   },
   "gitHead": "34dfab33c7abd58bd551ea88358ab0e586902e6f"
