--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
     "@types/chai": "^4.2.11",
+    "@types/lodash": "^4.14.159",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.11.2",
     "@types/sinon": "^9.0.4",
+    "@types/ws": "^7.4.0",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "brotli": "^1.3.2",
@@ -68,7 +70,6 @@
     "lerna": "^3.22.0",
     "lint-staged": "^10.2.11",
     "lodash": "^4.17.20",
-    "@types/lodash": "^4.14.159",
     "mocha": "^8.1.3",
     "nyc": "^15.1.0",
     "prettier": "^2.1.2",
@@ -82,6 +83,7 @@
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.3",
+    "ws": "^7.4.3",
     "zlib": "^1.0.5"
   },
   "husky": {
