--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pin-duo-duo/core",
-  "version": "0.0.2-alpha.6",
+  "version": "0.0.2-alpha.7",
   "keywords": [
     "pdd",
     "pinduoduo",
@@ -41,7 +41,7 @@
     "url": "https://github.com/lywzx/pdd-node-sdk/issues"
   },
   "dependencies": {
-    "@pin-duo-duo/pdd-origin-api": "^0.0.2-alpha.6",
+    "@pin-duo-duo/pdd-origin-api": "0.0.2-alpha.7",
     "crypto-js": "^4.0.0",
     "fast-json-stable-stringify": "^2.1.0"
   },
