--- a/package.json
+++ b/package.json
@@ -82,7 +82,14 @@
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.3",
-    "zlib": "^1.0.5"
+    "zlib": "^1.0.5",
+    "@nestjs/common": "^7.4.2",
+    "@nestjs/core": "^7.4.2",
+    "@nestjs/testing": "^7.4.2",
+    "reflect-metadata": "^0.1.12",
+    "@types/debug": "^4.1.5",
+    "@types/redis": "^2.8.25",
+    "redis": "^3.0.2"
   },
   "husky": {
     "hooks": {
