feat: lerna publish

--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -5,18 +5,7 @@
   "author": "lywzx <liuyang@lyblog.net>",
   "homepage": "https://github.com/lywzx/pdd-node-sdk/tree/master/packages/scripts#readme",
   "license": "MIT",
-  "main": "lib/index.common.js",
-  "module": "lib/index.esm.js",
-  "unpkg": "lib/index.js",
-  "jsdelivr": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
-  },
-  "files": [
-    "lib"
-  ],
+  "private": true,
   "publishConfig": {
     "registry": "http://registry.npmjs.org",
     "access": "public"
