--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,7 +23,7 @@
     "url": "git+https://github.com/lywzx/pdd-node-sdk.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "prepublishOnly": "cd ../.. && yarn build --only-package=@pin-duo-duo/core"
   },
   "bugs": {
     "url": "https://github.com/lywzx/pdd-node-sdk/issues"
