--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   ],
   "private": true,
   "scripts": {
-    "dev": "node --max_old_space_size=8192 node_modules/rollup/dist/bin/rollup -w -c node_modules/@lywzx/rollup-build-scripts/rollup.config.js -w --output-root-path=dist",
-    "build": "node --max_old_space_size=8192 node_modules/rollup/dist/bin/rollup -c node_modules/@lywzx/rollup-build-scripts/rollup.config.js",
+    "dev": "node --max_old_space_size=8192 node_modules/rollup/dist/bin/rollup -w -c node_modules/@lywzx/rollup-build-scripts/rollup.config.js",
+    "build": "node --max_old_space_size=8192 node_modules/@lywzx/rollup-build-scripts/index.js",
     "lint": "eslint packages --ext .ts --fix",
     "format": "prettier --write \"+(packages)/**/*.ts\"",
     "test": "mocha",
