--- a/packages/pdd-origin-api/package.json
+++ b/packages/pdd-origin-api/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/lywzx/pdd-node-sdk.git"
   },
   "scripts": {
-    "prepublishOnly": "cd ../.. && yarn build --only-package=@pin-duo-duo/pdd-origin-api"
+    "prepublishOnly": "cd ../.. && yarn build --only-package=@pin-duo-duo/pdd-origin-api --dts=false"
   },
   "bugs": {
     "url": "https://github.com/lywzx/pdd-node-sdk/issues"
