--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pin-duo-duo/core",
-  "version": "0.0.2-alpha.8",
+  "version": "1.0.0-alpha.0",
   "keywords": [
     "pdd",
     "pinduoduo",
@@ -29,7 +29,7 @@
     "url": "https://github.com/lywzx/pdd-node-sdk/issues"
   },
   "dependencies": {
-    "@pin-duo-duo/pdd-origin-api": "^0.0.2-alpha.8",
+    "@pin-duo-duo/pdd-origin-api": "1.0.0-alpha.0",
     "crypto-js": "^4.0.0",
     "fast-json-stable-stringify": "^2.1.0"
   },
