--- a/packages/redis-throttle-adapter/package.json
+++ b/packages/redis-throttle-adapter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pin-duo-duo/redis-throttle-adapter",
-  "version": "0.0.2-alpha.8",
+  "version": "1.0.0-alpha.0",
   "description": "> TODO: description",
   "author": "lywzx <liuyang@lyblog.net>",
   "homepage": "https://github.com/lywzx/pdd-node-sdk/tree/master/packages/redis-throttle-adapter#readme",
@@ -20,7 +20,7 @@
     "url": "https://github.com/lywzx/pdd-node-sdk/issues"
   },
   "devDependencies": {
-    "@pin-duo-duo/core": "^0.0.2-alpha.8"
+    "@pin-duo-duo/core": "1.0.0-alpha.0"
   },
   "peerDependencies": {
     "@types/redis": "^2.8.25",
