refactor(ci contents): ci contents

--- a/lerna.json
+++ b/lerna.json
@@ -4,6 +4,7 @@
   ],
   "command": {
     "publish": {
+      "contents": "dist",
       "ignoreChanges": [
         "**/test/**",
         "**/tsconfig.json"
