--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   ],
   "private": true,
   "scripts": {
-    "dev": "cross-env node_options=--max_old_space_size=4096 rollup -w -c build/rollup.config.js",
-    "build": "cross-env node_options=--max_old_space_size=4096 node build/build-pkg.js",
+    "dev": "node --max_old_space_size=8192 node_modules/rollup/dist/bin/rollup -w -c node_modules/@lywzx/rollup-build-scripts/rollup.config.js",
+    "build": "node --max_old_space_size=8192 node_modules/@lywzx/rollup-build-scripts/index.js",
+    "clean": "lerna exec rm -- -rf dist",
     "lint": "eslint packages --ext .ts --fix",
     "format": "prettier --write \"+(packages)/**/*.ts\"",
     "test": "mocha",
@@ -41,6 +42,7 @@
   },
   "homepage": "https://github.com/lywzx/pdd-node-sdk#readme",
   "devDependencies": {
+    "@lywzx/rollup-build-scripts": "0.0.7",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
@@ -57,6 +59,8 @@
     "@typescript-eslint/parser": "^4.3.0",
     "brotli": "^1.3.2",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "@types/chai-as-promised": "^7.1.3",
     "chalk": "^4.1.0",
     "cross-env": "^7.0.2",
     "eslint": "^7.10.0",
