--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -22,14 +22,14 @@
   "dependencies": {
     "@pin-duo-duo/core": "^1.0.0-alpha.3"
   },
-  "devDependencies": {
-    "@types/lodash": "^4.14.159",
-    "lodash": "^4.17.20"
-  },
   "peerDependencies": {
     "@nestjs/common": "^7.4.2",
     "@nestjs/core": "^7.4.2",
-    "@nestjs/testing": "^7.4.2"
+    "@nestjs/testing": "^7.4.2",
+    "@types/debug": "^4.1.5",
+    "debug": "^4.2.0",
+    "@types/lodash": "^4.14.159",
+    "lodash": "^4.17.20"
   },
   "gitHead": "34dfab33c7abd58bd551ea88358ab0e586902e6f"
 }
