--- a/lerna.json
+++ b/lerna.json
@@ -16,7 +16,7 @@
       "registry": "http://registry.npmjs.org"
     }
   },
-  "version": "1.0.0-alpha.6",
+  "version": "1.0.0",
   "useWorkspaces": true,
   "npmClient": "yarn"
 }
