--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pin-duo-duo/core",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "keywords": [
     "pdd",
     "pinduoduo",
