--- a/packages/pdd-origin-api/package.json
+++ b/packages/pdd-origin-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pin-duo-duo/pdd-origin-api",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.2",
   "description": "> TODO: description",
   "author": "lywzx <liuyang@lyblog.net>",
   "homepage": "https://github.com/lywzx/pdd-node-sdk/tree/master/packages/pdd-origin-api#readme",
