--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": true,
   "publishConfig": {
-    "registry": "http://registry.npmjs.org",
+    "registry": "https://registry.npmjs.org",
     "access": "public"
   },
   "repository": {
