--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -21,8 +21,10 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
+        redis-version: 6
 
-    - name: Build
+    - name: Test
       run: |
-        npm install
-        grunt
+        npm install -g yarn
+        yarn
+        yarn test
