--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -21,7 +21,11 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        redis-version: 6
+
+    - name: Start Redis
+      uses: supercharge/redis-github-action@1.4.0
+      with:
+        redis-version: 5
 
     - name: Test
       run: |
