--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,11 +11,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Get checkout
+        uses: actions/checkout@v3
+
+      - name: SetUp Node
+        uses: actions/setup-node@v3
         with:
           node-version: 16
+
+      - name: Start Redis
+        uses: supercharge/redis-github-action@1.4.0
+        with:
           redis-version: 6
+
       - run: npm install -g yarn
       - run: yarn
       - run: yarn test
